feat: add id to server config